# SPP

./: .gitignore
P1/: P1.sln
P1/1/: 1.vcxproj  hello.c
P1/2/: 2.c  2.vcxproj
P1/3/: 3.vcxproj  SLL.c  SLL.h  sorted_list.c  sorted_list.h
P1/4/: runme.sh
Praktikum1/: 5.c  6.c  Makefile  dotproduct.c  dotproduct_out  dotproductgraph.eps  dotproductgraph.m  heated-plate-parallel.cpp  heatedplate.m  hello-openmp.c  matMul.c  matrizenmult.m  sharing.c
Praktikum1/scripts/: runner_dot.sh  runner_heated.sh  runner_matmul.sh
Praktikum3/: CMakeLists.txt  batch_job.sh  kernel.cu  main.cpp  ppm.h  serial.cpp
